--- a/server/package.json
+++ b/server/package.json
@@ -4,15 +4,20 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-     "start": "nodemon start.js"
+    "start": "nodemon start.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "mongoose": "^8.16.5",
+    "multer": "^2.0.2",
     "nodemon": "^3.1.10"
   }
 }
